# libxenaml

./: Makefile.am  README  configure.in  libxenaml-config.src.in  libxenaml.pc.src.in  version-files
maintainer/: tag
src/: Makefile.am  amlcore.c  ext_prototypes.h  libxenaml.c  project.h  version.c  xenaml-defs.h  xenaml-head.h.in  xenaml-tail.h
test/: Makefile.am  project_test.h  test.c  test_aml_gen.c  test_aml_res.c
